@@ -1,3 +1,9 @@
+1998-10-23  Alex Zepeda  <garbanzo@hooked.net>
+
+	* saver.h: Add correct C style prototypes for startScreenSaver and friends.
+
+	* main.cpp: Make startScreenSaver and friends use C style name mangling.
+
 Version 0.3.7
 
 added geometry management to all screensaver setups except kmorph3d (Mario
